<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageAccueil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoIUT"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:contentDescription="@string/descri_logo"
            android:src="@drawable/logo_uvsq" />

        <TextView
            android:id="@+id/accueil1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/titre_accueil"
            android:textColor="@color/colorUvsq"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"
            android:paddingBottom="100dp"
            android:text="Le carousel"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/piedAccueil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:text="@string/pied_accueil"
            android:textAlignment="center"
            android:textColor="@color/colorUvsq"
            android:textStyle="italic" />
    </LinearLayout>
</FrameLayout>